# libflexdsp

./: dsp++.sln
dsp++/: .cproject  CMakeLists.txt  Makefile  doxyfile  dsp++-vc12.vcxproj  dsp++-vc12.vcxproj.filters  dsp++.vcxproj  dsp++.vcxproj.filters  sample.cpp
dsp++-test/: Makefile  (+4 more)
dsp++/android/jni/: Android.mk
dsp++/dsp++.xcodeproj/: project.pbxproj
dsp++/include/dsp++/: adaptfilt.h  algorithm.h  buffer.h  buffer_traits.h  complex.h  config.h  const.h  debug.h  dft.h  dynamics.h  fdaf.h  fft.h  filter.h  filter_design.h  fixed.h  float.h  intmath.h  ioport.h  lattice.h  levinson.h  lpc.h  mean.h  norm.h  overlap_add.h  overlap_save.h  platform.h  polyroots.h  pow2.h  resample.h  simd.h  stdint.h  stride_iterator.h  trivial_array.h  utility.h  vectmath.h  window.h  xcorr.h
dsp++/include/dsp++/fft/: detail.h
dsp++/include/dsp++/fftw/: allocator.h  dft.h  traits.h
dsp++/include/dsp++/flt/: biquad_design.h  fir_design.h  iir_design.h
dsp++/include/dsp++/snd/: buffer.h  convert.h  format.h  io_error.h  iobase.h  loudness.h  sample.h  sndfile_error.h
dsp++/jni/: Android.mk
dsp++/src/: adaptfilt.cpp  fft.cpp  filter.cpp  filter_design.cpp  fir_freq_samp.cpp  fixed.cpp  flt_biquad.cpp  flt_fs.cpp  flt_iir.cpp  flt_pm.cpp  format_win32.cpp  prefix.h  resample.cpp  simd.cpp  sse.h  utility.cpp  vectmath.cpp  window.cpp  zeropole.cpp
dsp++/src/arch/ppc/: cpu_ppc.cpp
dsp++/src/mkfilter/: complex.cpp  mkfcplx.cpp  mkfcplx.h  mkfcplxt.h  mkfilter.cpp  mkfilter.h  mkfltif.h
dsp++/src/rpoly/: rpoly.cpp
dsp++/src/snd/: format.cpp  io.cpp  loudness.cpp
(+207 files in other folders)
